[gd_scene load_steps=76 format=3 uid="uid://cupggegwxhfja"]

[ext_resource type="Texture2D" uid="uid://b8ofmgq2scs8d" path="res://assets/character/Combat Ready Idle.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://58cr8ula8ubn" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://ckeyrwyc2odd1" path="res://assets/character/Attack 1.png" id="2_qlg0r"]
[ext_resource type="Texture2D" uid="uid://drc4ljakbsg5d" path="res://assets/character/Jump.png" id="3_dqkch"]
[ext_resource type="Texture2D" uid="uid://cmc6j1mi86k33" path="res://assets/character/Run.png" id="3_qhqgy"]
[ext_resource type="Texture2D" uid="uid://clgpf32ca0do7" path="res://assets/character/Attack 2.png" id="3_tuyoq"]
[ext_resource type="Texture2D" uid="uid://d0rvafm5b831e" path="res://assets/character/Attack 3.png" id="4_fjrip"]
[ext_resource type="Texture2D" uid="uid://yfwcx6naxke7" path="res://assets/character/Roll.png" id="7_smehm"]
[ext_resource type="Texture2D" uid="uid://cikjiw2e610j1" path="res://assets/character/Shield Raise.png" id="9_ur7pv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ur7pv"]
bg_color = Color(0.35, 0.0035, 0.0035, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("2_qlg0r")
region = Rect2(40, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("2_qlg0r")
region = Rect2(80, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("2_qlg0r")
region = Rect2(120, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("2_qlg0r")
region = Rect2(160, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("2_qlg0r")
region = Rect2(200, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("2_qlg0r")
region = Rect2(240, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("2_qlg0r")
region = Rect2(280, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("2_qlg0r")
region = Rect2(320, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("2_qlg0r")
region = Rect2(360, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("3_tuyoq")
region = Rect2(0, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("3_tuyoq")
region = Rect2(40, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("3_tuyoq")
region = Rect2(80, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("3_tuyoq")
region = Rect2(120, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("3_tuyoq")
region = Rect2(160, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("3_tuyoq")
region = Rect2(200, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("3_tuyoq")
region = Rect2(240, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("3_tuyoq")
region = Rect2(280, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("3_tuyoq")
region = Rect2(320, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("3_tuyoq")
region = Rect2(360, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("3_tuyoq")
region = Rect2(400, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("3_tuyoq")
region = Rect2(440, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("4_fjrip")
region = Rect2(0, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1tg"]
atlas = ExtResource("4_fjrip")
region = Rect2(40, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvfe"]
atlas = ExtResource("4_fjrip")
region = Rect2(80, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_giy8y"]
atlas = ExtResource("4_fjrip")
region = Rect2(120, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdfoy"]
atlas = ExtResource("4_fjrip")
region = Rect2(160, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhpqf"]
atlas = ExtResource("4_fjrip")
region = Rect2(200, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5jhy"]
atlas = ExtResource("4_fjrip")
region = Rect2(240, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_holxr"]
atlas = ExtResource("4_fjrip")
region = Rect2(280, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(22, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("1_3vyb7")
region = Rect2(44, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("1_3vyb7")
region = Rect2(66, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("1_3vyb7")
region = Rect2(88, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("3_dqkch")
region = Rect2(0, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("3_dqkch")
region = Rect2(22, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("3_dqkch")
region = Rect2(44, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("3_dqkch")
region = Rect2(66, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx1m4"]
atlas = ExtResource("7_smehm")
region = Rect2(0, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gjji"]
atlas = ExtResource("7_smehm")
region = Rect2(22, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2ulf"]
atlas = ExtResource("7_smehm")
region = Rect2(44, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e8lb"]
atlas = ExtResource("7_smehm")
region = Rect2(66, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gdjj"]
atlas = ExtResource("7_smehm")
region = Rect2(88, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc3ue"]
atlas = ExtResource("7_smehm")
region = Rect2(110, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxlsd"]
atlas = ExtResource("7_smehm")
region = Rect2(132, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha2mi"]
atlas = ExtResource("7_smehm")
region = Rect2(154, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_apa73"]
atlas = ExtResource("7_smehm")
region = Rect2(176, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_74r1k"]
atlas = ExtResource("7_smehm")
region = Rect2(198, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8svfe"]
atlas = ExtResource("7_smehm")
region = Rect2(220, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("3_qhqgy")
region = Rect2(22, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(44, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("3_qhqgy")
region = Rect2(66, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(88, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("3_qhqgy")
region = Rect2(110, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a3c5"]
atlas = ExtResource("9_ur7pv")
region = Rect2(0, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_42b1b"]
atlas = ExtResource("9_ur7pv")
region = Rect2(22, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7ic4"]
atlas = ExtResource("9_ur7pv")
region = Rect2(44, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_au7lq"]
atlas = ExtResource("9_ur7pv")
region = Rect2(66, 0, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nubpm"]
atlas = ExtResource("9_ur7pv")
region = Rect2(88, 0, 22, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_fjrip"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}],
"loop": false,
"name": &"attack_0",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}],
"loop": false,
"name": &"attack_1",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs1tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giy8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdfoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhpqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5jhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_holxr")
}],
"loop": false,
"name": &"attack_2",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}],
"loop": false,
"name": &"jump",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx1m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2ulf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e8lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gdjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc3ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxlsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apa73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74r1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8svfe")
}],
"loop": false,
"name": &"roll",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}],
"loop": false,
"name": &"run",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a3c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42b1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7ic4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au7lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nubpm")
}],
"loop": false,
"name": &"shield",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qhqgy"]
radius = 8.06226

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mx1m4"]
size = Vector2(20, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ur7pv"]
size = Vector2(8, 21)

[node name="player" type="CharacterBody2D" groups=["player"]]
z_index = 1
script = ExtResource("1_g2els")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(25, -30)
zoom = Vector2(7, 7)
limit_smoothed = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 30.0
size_flags_horizontal = 3
theme_override_styles/fill = SubResource("StyleBoxFlat_ur7pv")
value = 100.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fjrip")
animation = &"shield"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qhqgy")

[node name="HitBoxAttack0" type="Area2D" parent="."]
monitoring = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBoxAttack0"]
visible = false
polygon = PackedVector2Array(-11, -13, -11, -14, -6, -19, -2, -21, 13, -21, 20, -14, 20, 1, 17, 7, 16, 8, 6, 8, 2, 6, 2, 4, 6, 4, 6, 3, 6, 3, 10, -2, 10, -7, 2, -16, -2, -16, -9, -13)
disabled = true

[node name="HitBoxAttack1" type="Area2D" parent="."]
monitoring = false

[node name="CollisionPolygon2D_0" type="CollisionPolygon2D" parent="HitBoxAttack1"]
visible = false
polygon = PackedVector2Array(-4, -4, -5, -4, -6, -5, -7, -8, -7, -13, -3, -15, 9, -15, 16, -12, 19, -9, 20, -7, 20, -1, 19, 1, 17, 3, 15, 4, 13, 5, 10, 6, 7, 7, -5, 7, -5, 6, 2, 6, 2, 5, 5, 5, 5, 4, 8, 3, 8, 3, 11, 1, 11, -3, 5, -8, 3, -9)
disabled = true

[node name="CollisionPolygon2D_1" type="CollisionPolygon2D" parent="HitBoxAttack1"]
visible = false
polygon = PackedVector2Array(-4, -12, 8, -12, 11, -11, 14, -10, 18, -8, 20, -6, 20, 3, 17, 6, 15, 7, 11, 8, -12, 8, -16, 7, -16, 6, -10, 3, -8, 2, -5, 2, -5, 4, 4, 4, 4, 3, 8, 3, 8, 2, 10, 2, 10, 1, 11, 1, 11, 0, 12, -2, 12, -5, 3, -10, -4, -11)
disabled = true

[node name="HitBoxAttack2" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxAttack2"]
visible = false
shape = SubResource("RectangleShape2D_mx1m4")
disabled = true

[node name="ShieldBox" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShieldBox"]
visible = false
shape = SubResource("RectangleShape2D_ur7pv")
disabled = true
debug_color = Color(0.996083, 0, 0.193508, 0.42)
